--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "dependencies": {
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
+    "@types/react-css-modules": "^4.6.4",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.3.2",
     "axios": "^0.26.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "husky": "^4.2.5",
-    "prettier": "^2.0.5",
     "react": "^16.13.1",
+    "react-css-modules": "^4.7.11",
     "react-dom": "^16.13.1",
     "react-router-dom": "5.3.0",
     "react-scripts": "3.4.1",
@@ -53,5 +54,16 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.30.5",
+    "@typescript-eslint/parser": "^5.30.5",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^8.19.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.30.1",
+    "prettier": "2.7.1",
+    "sass": "^1.53.0"
   }
 }
